--- a/app/src/main/res/menu/menu_timetable_setup.xml
+++ b/app/src/main/res/menu/menu_timetable_setup.xml
@@ -2,8 +2,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.example.omar.timeTableV2.Activity.TimetableSetup">
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/action_new_subject"
+          android:icon="@android:drawable/ic_input_add"
           android:orderInCategory="100"
-          android:title="@string/action_settings"
-          app:showAsAction="never"/>
+          android:title="@string/add_new_subject" app:showAsAction="always"/>
 </menu>
