--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_launcher"
     android:layout_width="match_parent"
@@ -12,9 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.omar.timeTableV2.Activity.LauncherActivity">
 
-    <ImageView
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
-        android:layout_centerVertical="true" android:layout_centerHorizontal="true"
-        android:id="@+id/imageView" android:contentDescription="@string/mainimage"/>
+        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 </RelativeLayout>
