--- a/app/src/main/res/layout/activity_timetable_setup.xml
+++ b/app/src/main/res/layout/activity_timetable_setup.xml
@@ -1,33 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/root_setup"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_new_session"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" android:layout_margin="@dimen/fab_margin"
-        android:clickable="true" app:backgroundTint="@android:color/white"
-        app:srcCompat="@android:drawable/ic_input_add"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/stp_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/stp_toolbar"
+        android:background="?attr/colorPrimary" android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rscl_setup"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2" android:layout_marginTop="@dimen/appbar_padding_top"/>
+        android:layout_above="@+id/btn_save_day"
+        android:layout_alignParentStart="true" android:layout_below="@+id/textView2"
+        android:layout_marginTop="@dimen/appbar_padding_top"
+        android:paddingBottom="@dimen/appbar_padding_top"/>
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/stp_toolbar"
         android:layout_marginStart="@dimen/activity_vertical_margin"
-        android:layout_marginTop="@dimen/activity_horizontal_margin" android:text="@string/day"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:text="@string/day"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
     <Spinner
         android:id="@+id/spnr_set_up"
         android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_below="@id/stp_toolbar"
         android:layout_marginEnd="@dimen/activity_vertical_margin"
         android:layout_marginStart="@dimen/appbar_padding_top"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_toEndOf="@+id/textView2"/>
+    <Button
+        android:id="@+id/btn_save_day"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/spnr_set_up" android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:text="@string/save"/>
+    <Button
+        android:id="@+id/btn_new_subject"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:layout_alignParentStart="true"
+        android:layout_below="@+id/rscl_setup"
+        android:layout_marginStart="@dimen/activity_vertical_margin"
+        android:text="@string/add_new_subject"/>
 </RelativeLayout>
