--- a/app/src/main/res/menu/menu_timetable_setup.xml
+++ b/app/src/main/res/menu/menu_timetable_setup.xml
@@ -2,8 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.example.omar.timeTableV2.Activity.TimetableSetup">
-    <item android:id="@+id/action_new_subject"
-          android:icon="@android:drawable/ic_input_add"
+    <item android:id="@+id/save_table"
           android:orderInCategory="100"
-          android:title="@string/add_new_subject" app:showAsAction="always"/>
+          android:title="@string/done" app:showAsAction="always"/>
 </menu>
