--- a/app/src/main/res/layout/adaptor_view_timetable_setup.xml
+++ b/app/src/main/res/layout/adaptor_view_timetable_setup.xml
@@ -17,6 +17,10 @@
         android:paddingRight="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
+        <TextView
+            android:id="@+id/stp_session_no"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:text="TextView"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
